# poetry-install-shared-lib-demo

./: .gitignore  README.rst  build.py  pyproject.toml
poetry_install_shared_lib_demo/: wrappers.pyx
tests/: test_example_function.py  test_poetry_install_shared_lib_demo.py
