[tool.poetry]
name = "poetry-install-shared-lib-demo"
version = "0.1.0"
description = "How to build and distribute a C++ shared library inside a Python wheel using Poetry."
authors = ["Allen Riddell <riddella+stan@indiana.edu>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
